# pfqueue

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.in  pfqconfig.c  pfqconfig.h  pfqhelp.h  pfqlib.h  pfqmessage.h  pfqtcp.h  pfqueue.1  pfqueue.c  pfqueue.conf.5  pfqueue.spec.in  pfregex.h
backends/: Makefile.am  Makefile.in  pfq_backend.h  pfq_exim.c  pfq_postfix1.c  pfq_postfix2.c  pfq_service.c  pfq_service.h  pfq_socket.c
frontends/: Makefile.am  Makefile.in  pfq_fencurses.c  pfq_fencurses.h  pfq_fesocket.c  pfq_frontend.h
libpfq/: Makefile.am  Makefile.in  pfqlib.c  pfqlib_fe.c  pfqlib_priv.h
