#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([pfqueue], [0.6.0], [rs4000@gmail.com])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(pfqueue, 0.6.0)

# Checks for programs.
LT_INIT
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB(ncurses,newwin)
AC_CHECK_LIB(pthread,pthread_create)
AC_CHECK_LIB(c_r,pthread_create)
AC_CHECK_LIB(dl,dlopen)
AC_CHECK_LIB(socket,accept)

# Checks for header files.
AC_CHECK_HEADERS([netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero gethostbyname memset regcomp socket strstr])

AC_CONFIG_FILES([Makefile
                 backends/Makefile
                 frontends/Makefile
                 libpfq/Makefile])
AC_OUTPUT
