lib_LTLIBRARIES = libpfq_postfix1.la libpfq_postfix2.la libpfq_exim.la libpfq_socket.la

libpfq_postfix1_la_SOURCES=pfq_postfix1.c pfq_backend.h pfq_service.c pfq_service.h
libpfq_postfix1_la_LDFLAGS=-module

libpfq_postfix2_la_SOURCES=pfq_postfix2.c pfq_backend.h pfq_service.c pfq_service.h
libpfq_postfix2_la_LDFLAGS=-module

libpfq_exim_la_SOURCES=pfq_exim.c pfq_backend.h pfq_service.c pfq_service.h
libpfq_exim_la_LDFLAGS=-module

libpfq_socket_la_SOURCES=pfq_socket.c pfq_backend.h pfq_service.c pfq_service.h
libpfq_socket_la_LDFLAGS=-module

